envoy/envoy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  labels:
    app: envoy 
spec:
  selector:
    matchLabels:
      app: envoy 
  template:
    metadata:
      labels:
        app: envoy 
    spec:
      containers:
        - name: envoy
          image: envoyproxy/envoy:v1.16-latest
          command: ["/usr/local/bin/envoy"]
          args:
            - --config-path /usr/local/etc/envoy/envoy-config.yaml
            - --service-cluster front-proxy
            - --log-level info
            - --component-log-level filter:trace,http:debug,router:debug
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /usr/local/etc/envoy
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: envoy-config
            items:
              - key: config
                path: envoy-config.yaml
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: envoy
  labels:
    app: envoy 
spec:
  selector:
    app: envoy 
  ports:
    - name: http 
      port: 8080
      protocol: TCP
